# qsqlcipher-qt5

./: .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  README.md  configure.cmake  qsql_sqlite.cpp  qsqlcipher.pro
android-libs/: VERSIONS
qsqlcipher/: .qmake.conf  CMakeLists.txt  qsql_sqlite.cpp  qsql_sqlite_p.h  qsqlcipher.pro  smain.cpp
tests/: main.cpp  qt.conf.in  tests.pro
